# updl-compiler

./: .gitignore  .gitmodules  README.md  flatbuffers_config.py  pyproject.toml
examples/: .gitignore  main.py  pyproject.toml
examples/anomaly_detection/: ad_compiler.py  ad_model.py  ad_preprocessor.py  ad_train.py  create_quantize_calibrate_idxs.py  download.sh
examples/anomaly_detection/uph5/: ad_ref_model_int16.c  ad_ref_model_int16.h
examples/danet/: danet_compiler.py  danet_generate_test_input_fp32.py  danet_generate_test_input_int16.py  danet_model.py  danet_preprocessor.py  danet_train.py
examples/danet/uph5/: danet_test_inputs_fp32.c  danet_test_inputs_fp32.h  danet_uph5_model_int16.c  danet_uph5_model_int16.h
examples/image_classification/: download.sh  ic_compiler.py  ic_generate_layer_output_fp32.py  ic_generate_test_input_fp32.py  ic_litert_compiler.py  ic_model.py  ic_preprocessor.py  ic_quantize_calibrate_idxs.txt  ic_train.py
examples/image_classification/litert/: ic_model_data.cc  ic_model_data.h  ic_test_layers_fp32_activation.c  ic_test_layers_fp32_activation.h
examples/image_classification/uph5/: ic_test_inputs_fp32.c  ic_test_inputs_fp32.h  ic_test_layers_fp32_activation.c  ic_test_layers_fp32_activation_1.c  ic_test_layers_fp32_activation_1.h  ic_test_layers_fp32_activation_2.c  ic_test_layers_fp32_activation_2.h  ic_test_layers_fp32_activation_6.c  ic_test_layers_fp32_activation_6.h  ic_test_layers_fp32_average_pooling2d.c  ic_test_layers_fp32_average_pooling2d.h  ic_test_layers_fp32_batch_normalization_2.c  ic_test_layers_fp32_batch_normalization_2.h  ic_test_layers_fp32_batch_normalization_6.c  ic_test_layers_fp32_batch_normalization_6.h  ic_test_layers_fp32_dense.c  ic_test_layers_fp32_dense.h  ic_test_layers_fp32_softmax.c  ic_test_layers_fp32_softmax.h  ic_uph5_model_int16.c  ic_uph5_model_int16.h
examples/image_classification/utils/: generate_calibration_indices.py
examples/keyword_spotting/: .gitignore  kws_compiler.py  kws_generate_layer_output_fp32.py  kws_generate_test_input_fp32.py  kws_generate_test_input_int16.py  kws_litert_compiler.py  kws_model.py  kws_train.py
examples/keyword_spotting/flatbuffers/: kws_uph5_model_flatbuf.c  kws_uph5_model_flatbuf.h
examples/keyword_spotting/litert/: kws_model_data.cc  kws_model_data.h  kws_test_layers_fp32_activation.c
examples/keyword_spotting/uph5/: kws_mock_input_data_int16.h  kws_test_input_data_int16.c  kws_test_inputs_fp32.c  kws_test_inputs_fp32.h  kws_test_inputs_int16.c  kws_test_inputs_int16.h  kws_test_layers_fp32_activation.c  (+14 more)
examples/kws/: README.md  kws_compiler.py  kws_infer_float32.py  kws_infer_int8.py  kws_preprocessor.py  kws_quantize_int16_rep_dataset.py  kws_quantize_wav_to_c_array_int16.py
examples/streaming_wakeword/: create_quantize_calibrate_idxs.py  download.sh  sww_compiler.py  sww_dataset.py  sww_model.py  sww_preprocessor.py  sww_quantize_calibrate_idxs.txt  sww_train.py
examples/visual_wake_words/: download.sh  vww_compiler.py  vww_preprocessor.py  vww_quantize_calibrate_idxs.txt  vww_train.py
(+61 files in other folders)
