[project]
name = "updl-compiler"
version = "0.1.0"
description = "UPDL Model Compiler for UP301/201 Embedded Systems - Convert ML models to UPH5 format"
readme = "README.md"
authors = [
    { name = "Kaiyin Hung", email = "kaiyin.hung@upbeattechtw.com" }
]
requires-python = ">=3.9"
dependencies = [
    "tensorflow==2.13.1",
    "numpy>=1.21.0",
    "tqdm>=4.67.1",
    "tensorflow-datasets>=4.9.3",
]
keywords = ["machine-learning", "embedded", "quantization", "tensorflow", "inference"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Embedded Systems",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "flake8>=5.0.0",
    "mypy>=1.0.0",
    "twine>=4.0.0",
]
docs = [
    "sphinx>=5.0.0",
    "sphinx-rtd-theme>=1.0.0",
]

[project.scripts]
updl-compile = "updl_compiler.cli.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "flake8>=5.0.0",
    "mypy>=1.0.0",
]

[tool.uv.workspace]
members = ["examples"]

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning:tensorflow.*",
    "ignore:module 'sre_constants' is deprecated:DeprecationWarning",
]

[tool.hatch.build.targets.wheel]
packages = ["src/updl_compiler"]
