[project]
name = "updl-examples"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "absl-py>=2.3.1",
    "librosa>=0.11.0",
    "matplotlib>=3.10.7",
    "numpy>=1.24.3",
    "pillow>=12.0.0",
    "scipy>=1.15.3",
    "tensorflow>=2.13.1",
]
